Fix jumpy background on resizing URL bar
Attempt #0

--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ h1 {
 
 .bg{
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	z-index: -1;
 	background: url('img/bgd1.jpg') fixed center / cover;
 	position: fixed;
